Adicionado lógica pra não deixar o usuário excluir sua conta no caso de ter pontos de coleta cadastrados.
